--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-sound": "^1.2.0"
   },
   "scripts": {
     "startClient": "react-scripts start",
