--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
@@ -17,7 +18,7 @@
     "react-sound": "^1.2.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
