--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-sound": "^1.2.0"
   },
   "scripts": {
-    "start": "cross-env PORT=3001 REACT_APP_SERVER_HOST=localhost react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
