--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "csvtojson": "^2.0.10",
@@ -16,10 +17,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "react-sound": "^1.2.0"
+    "react-sound": "^1.2.0",
+    "serve": "^12.0.0"
   },
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
+    "start:prod": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
